--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
   font-weight: 300;
   color: #111;
   background: #edeff0;
+  background-image: url('svgs_resized/background.svg');
 }
 
 #container {
