--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,18 @@ footer {
 .heart-icon,
 .location-icon,
 .contact-icon {
-  transform: scale(0.6) translate(10px, 10px);
-  padding-right: 2px;
+  transform-origin: 28px 24px;
+  transform: scale(0.6) translate(-5px, 10px);
+  transition: transform .2s ease-out;
   fill: #39add1;
+  height: 28px;
+  width: 28px;
+}
+
+.heart-icon:hover,
+.location-icon:hover,
+.contact-icon:hover {
+  transform: rotate(-20deg) scale(0.8);
 }
 
 /* --------------------------
